# Life-os

./: .dockerignore  .gitignore  AGENTS.md  README.md  compose.yaml
backend/: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260720_01_daily_planning.py  20260720_02_action_completed.py  20260720_03_inbox_items.py  20260720_04_commitment_day.py
backend/src/: __init__.py  config.py
backend/src/api/: commitment_day.py  daily_planning.py  errors.py  inbox.py  main.py  weekly_planning.py
backend/src/api/dependencies/: __init__.py  commitment_day.py  daily_planning.py  inbox.py
backend/src/application/: __init__.py  commitment_day.py  daily_planning.py  inbox.py  repositories.py  unit_of_work.py  weekly_planning.py
backend/src/domain/: __init__.py  commitment_day.py  daily_planning.py  inbox.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/database/: __init__.py  commitment_day_repository.py  config.py  engine.py  (+3 more)
backend/src/modules/: __init__.py
backend/tests/: test_health.py  test_settings.py
backend/tests/api/: test_commitment_day.py  test_cors.py  test_daily_planning.py  test_dependencies.py  test_errors.py  test_inbox.py  test_weekly_planning.py
backend/tests/application/: test_commitment_day.py  test_daily_planning.py  test_inbox.py  test_weekly_planning.py
backend/tests/domain/: test_commitment_day.py  test_daily_planning.py  test_inbox.py
backend/tests/infrastructure/: test_commitment_day_repository.py  test_database.py  test_day_repository.py  test_inbox_repository.py  test_migrations.py
(+17 files in other folders)
