[project]
name = "life-os-backend"
version = "0.1.0"
description = "Technical backend foundation for Life OS"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16,<2.0",
    "fastapi>=0.116,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.4,<9.0",
    "ruff>=0.12,<1.0",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
